[project]
name = "subtensornodeapi"
version = "0.0.1"
authors = [
  { name="Opentensor Foundation", email="cameron@opentensor.ai" },
]
description = "Subtensor Node API for bittensor"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you need NOT include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
subtensornodeapi = ["subtensor-node-api-linux"]
