[project]
name = "subtensorapi"
version = "0.0.1"
authors = [
  { name="Opentensor Foundation", email="cameron@opentensor.ai" },
  { name="Opentensor Foundation", email="eduardo@opentensor.ai" },
]
license = "MIT"
description = "Subtensor API package for bittensor"
readme = "README.md"
requires-python = ">=3.7"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
subtensornodeapi = ["subtensor-node-api-linux"]
