[build-system]
requires = ["setuptools>=61.0,<62.0", "build>=0.8.0,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "subtensorapi"
authors = [
  { name="Opentensor Foundation", email="cameron@opentensor.ai" },
  { name="Opentensor Foundation", email="eduardo@opentensor.ai" },
]
license = { file = "LICENSE" }
description = "Subtensor API package for bittensor"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "tqdm>=4.64.0,<5",
    "rich>=12.6.0,<13"
]
project_urls ={
    "Documentation": "https://github.com/opentensor/subtensor-node-api#subtensor-node-api",
    "Source": "https://github.com/opentensor/subtensor-node-api"
}

requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {text = "MIT"}


[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
test = ["unittest"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[console_scripts]
subtensorapi = "subtensorapi.__main__:main"
